# QA-Chatbot

./: .env.local  .gitignore  README.md  SignUp.tsx  package-lock.json
assets/: system-design.excalidraw
backend/: .env.example  README.md  launch_workers.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/endpoints/: chat.py  summary.py
backend/app/core/: config.py  exceptions.py  protocols.py  tools.py
backend/app/models/: chat.py
backend/app/mq/: activities.py  exceptions.py  queue.py  worker.py
backend/app/routers/: chat.py  documents.py  summary.py
backend/app/schemas/: documents.py
backend/app/services/: agent.py  chat_service.py  document_service.py  model_client.py  summary_service.py
backend/app/utils/: auth.py  conversation.py
backend/redis/: queue.py  worker.py
backend/tests/: conftest.py  test_chat.py  test_llm_performance.py
frontend/: middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/document/[id]/: route.ts
frontend/app/api/documents/: route.ts
frontend/app/api/summary/: route.ts
frontend/app/api/summary/[summary_id]/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/components/: ThemeInitializer.tsx
frontend/app/dashboard/: Dashboard.tsx  page.tsx
frontend/app/dashboard/components/: AccountManagementDialog.tsx  AppNavbar.tsx  ChartUserByCountry.tsx  CustomDatePicker.tsx  Header.tsx  InfinityLoader.tsx  MainGrid.tsx  MenuContent.tsx  NavbarBreadcrumbs.tsx  OptionsMenu.tsx  SelectContent.tsx  SideMenu.tsx  StatCard.tsx  ToastProvider.tsx  UserAccountSection.tsx
frontend/app/dashboard/components/chat/: ChatContainer.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx  Socket.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/app/dashboard/components/media/: DocumentManagement.tsx  DocumentPreview.tsx  DocumentUpload.tsx
frontend/app/reset-password/: page.tsx
frontend/app/shared-theme/: AppTheme.tsx  themePrimitives.ts
frontend/app/sign-in/: SignIn.tsx  page.tsx
frontend/app/sign-in-side/components/: Content.tsx  ForgotPassword.tsx  SignInCard.tsx
frontend/app/sign-up/: SignUp.tsx  page.tsx
frontend/public/: theme-init.js
frontend/utils/: config.ts
frontend/utils/supabase/: auth-helpers.ts  client.ts  middleware.ts  server.ts
inference_server/: main.py  requirements.txt
supabase/: config.toml
supabase/migrations/: 20251007005327_create_tables.sql  20251007212809_add_provider_tokens.sql  20251017210036_add_summary_date_range.sql  20251018162021_add_user_trigger.sql  20251021223934_alter_document_table.sql  20251106071837_vector_search_threshold.sql  20251106171735_add_conversation_history.sql
(+2 files in other folders)
